# mortgage-scraper

./: .gitignore  README.md  agents.txt  conftest.py  main.py  requirements.txt  sbab_eda.ipynb  segments.py  setup.cfg
.github/workflows/: cicd.yml
mortgage_scraper/: __main__.py  base_scraper.py  base_sink.py  cli.py  csv_sink.py  hypoteket_scraper.py  ica_scraper.py  sbab_banken_scraper.py  scraper_config.py  segment.py  skandia_scraper.py
notebooks/: sbab_eda.ipynb  sbab_pricing_surface.ipynb
scripts/: harmonise.py  parallelize.py  run.sh
src/: base_scraper.py  base_sink.py  cli.py  csv_sink.py  hypoteket_scraper.py  ica_scraper.py  sbab_banken_scraper.py  segment.py  skandia_scraper.py
tests/: test_csv_sink.py  test_e2e.py  test_scraper_config.py  test_segment.py
