[flake8]
max-line-length = 88

[metadata]
name = mortgage-scraper
version = 0.0.1
author = Erik Hakansson
description = Web scraper for various niche bank mortgage providers
long_description = file: README.md
url = https://github.com/Expan75/
project_urls = Bug Tracker = https://github.com/Expan75/py-lorem-picsum/issues
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir==mortgage_scraper
packages=find:
python_requires = >=3.10

[options.packages.find]
where=mortgage_scraper
